fix: remove new getFirst call to lists to stay compatible to older Java versions